@@ -1,3 +1,7 @@
+2003-10-12  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* gnomine.c: Documented the undocumented command-line options.
+
 2003-09-17  Callum McKenzie  <callum@physics.otago.ac.nz>
 
 	* gnomine.c (main): Removed old i18n code that wasn't necessary
